--- a/account_reconcile_oca/views/account_move_line.xml
+++ b/account_reconcile_oca/views/account_move_line.xml
@@ -16,7 +16,7 @@
             >
                 <field name="date" />
                 <field name="move_id" optional="show" />
-                <field name="invoice_due_date" optional="show" />
+                <field name="date_maturity" optional="show" />
                 <field name="account_id" optional="show" />
                 <field name="partner_id" />
                 <field name="company_currency_id" column_invisible="1" />
