[16.0][IMP] add bank statement status

--- a/account_reconcile_oca/views/account_bank_statement.xml
+++ b/account_reconcile_oca/views/account_bank_statement.xml
@@ -23,6 +23,7 @@
                         <field name="name" required="1" />
                         <field name="balance_start" />
                         <field name="balance_end_real" />
+                        <field name="is_reconciled" />
                         <field name="attachment_ids" widget="many2many_binary" />
                         <field name="line_ids" invisible="1" />
                     </group>
@@ -42,5 +43,36 @@
             (0, 0, {'view_mode': 'form', 'view_id': ref('account_bank_statement_form_edit')})]"
         />
         <field name="target">new</field>
+    </record>
+    <record model="ir.ui.view" id="view_bank_statement_form">
+        <field name="name">account.bank.statement.form.state</field>
+        <field name="model">account.bank.statement</field>
+        <field name="inherit_id" ref="account_statement_base.view_bank_statement_form" />
+        <field name="arch" type="xml">
+            <xpath expr='//sheet' position="before">
+                <header>
+
+                    <button
+                        name="action_confirm_statement"
+                        string="Confirm Statement"
+                        type="object"
+                        class="btn-primary"
+                        states="open"
+                    />
+
+                    <field
+                        name="state"
+                        widget="statusbar"
+                    />
+                </header>
+            </xpath>
+            <xpath expr="//form" position="inside">
+                <div class="oe_chatter">
+                    <field name="message_follower_ids" groups="base.group_user"/>
+                    <field name="activity_ids"/>
+                    <field name="message_ids"/>
+                </div>
+            </xpath>
+        </field>
     </record>
 </odoo>
