--- a/account_statement_base/views/account_bank_statement_line.xml
+++ b/account_statement_base/views/account_bank_statement_line.xml
@@ -63,7 +63,7 @@
         <tree editable="top" multi_edit="1" decoration-muted="is_reconciled">
             <field name="sequence" />
             <field name="date" attrs="{'readonly': [('is_reconciled', '=', True)]}" />
-            <field name="move_id" optional="hide" />
+            <field name="move_id" optional="hide" required="0" />
             <field
                     name="payment_ref"
                     attrs="{'readonly': [('is_reconciled', '=', True)]}"
