--- a/account_statement_base/views/account_bank_statement_line.xml
+++ b/account_statement_base/views/account_bank_statement_line.xml
@@ -138,14 +138,14 @@
         <search>
             <field
                     name="payment_ref"
-                    filter_domain="['|', '|', ('payment_ref', 'ilike', self), ('ref', 'ilike', self), ('narration', 'ilike', self)]"
-                    string="Label, Ref or Notes"
+                    filter_domain="['|', '|', '|', ('amount', 'ilike', self), ('payment_ref', 'ilike', self), ('ref', 'ilike', self), ('narration', 'ilike', self)]"
+                    string="Label, Ref, Notes or Amount"
                 />
             <field name="partner_id" />
             <field name="date" />
             <field name="statement_id" />
             <field name="journal_id" domain="[('type', 'in', ('bank', 'cash'))]" />
-            <field name="amount" />
+            <field name="amount" filter_domain="[('amount', 'ilike', self)]" />
             <separator />
             <filter
                     name="reconciled"
