[FIX] account_reconcile_oca: Fix the layout of statement button on reconciliation screen

--- a/account_reconcile_oca/static/src/scss/reconcile.scss
+++ b/account_reconcile_oca/static/src/scss/reconcile.scss
@@ -16,9 +16,9 @@
         width: 100%;
         .o_reconcile_create_statement {
             position: absolute;
-            height: 4px;
+            height: 0px;
             margin: 0;
-            padding: 2px 0 0 0;
+            padding: 0 0 0 0;
             border: 0;
             top: -14px;
             opacity: 0;
